# ros2-four-wheel-robot-nav-slam

./: README.md
install/: local_setup.sh  setup.sh
install/bringup/share/bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/four_wheel_robot_description/share/four_wheel_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: robot_system.launch.py
src/four_wheel_robot_description/: CMakeLists.txt
src/four_wheel_robot_description/config/: controllers.yaml  nav2.rviz  nav2_params.yaml  robot.rviz  slam.rviz  slam_toolbox.yaml
src/four_wheel_robot_description/launch/: display.launch.py  gazebo.launch.py  navigation.launch.py  slam.launch.py
src/four_wheel_robot_description/maps/: map.yaml
src/four_wheel_robot_description/urdf/: robot.urdf.xacro
src/four_wheel_robot_description/worlds/: obstacles.world
src/localization/: CMakeLists.txt
src/localization/config/: amcl.yaml  localization.rviz
src/localization/launch/: localization.launch.py
src/localization/maps/: map.pgm  map.yaml
src/navigation/: CMakeLists.txt
src/navigation/config/: costmap.yaml  nav2_params.yaml  navigation.rviz
src/navigation/launch/: navigation.launch.py
src/slam_package/: CMakeLists.txt  package.xml
src/slam_package/config/: slam.rviz  slam.yaml
src/slam_package/launch/: slam.launch.py
(+81 files in other folders)
