<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_package</name>
  <version>0.1.0</version>
  <description>SLAM mapping using slam_toolbox for the four-wheel robot</description>
  <maintainer email="masteranany23@gmail.com">vini</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>four_wheel_robot_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
